fixed image distortion

--- a/styles/main-dev.css
+++ b/styles/main-dev.css
@@ -10,13 +10,13 @@ body {
 	padding: 20px;
 }
 .navigation {
-	width: 200px;
+	width: 100%;
 	height: 120px;
 	display: flex;
 }
 
 .navigation img {
-	width: 100%;
+	width: 15%;
 	height: auto;
 	padding-right: 20px;
 	float: center;
